force-app/main/default/objects/numm__stockMovement__c/numm__stockMovement__c.object-meta.xml
<CustomObject>
    <label>Mouvement de stock</label>
    <nameField>
        <displayFormat>MS{00000}</displayFormat>
        <label>Nom de Mouvement de stock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mouvements de stock</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>