force-app/main/default/objects/numm__stockMovement__c/fields/numm__Commentaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>