force-app/main/default/objects/numm__stockMovement__c/fields/numm__Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mouvements de stock</relationshipLabel>
    <relationshipName>stockMovement</relationshipName>
    <type>Lookup</type>
</CustomField>