force-app/main/default/objects/numm__stockMovement__c/fields/numm__Compte_du_client__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_du_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte du client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mouvements de stock (Compte du client)</relationshipLabel>
    <relationshipName>stockMovementCliduCli</relationshipName>
    <type>Lookup</type>
</CustomField>