force-app/main/default/objects/numm__stockMovement__c/fields/numm__Compte_Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_Fournisseur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Fournisseur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mouvements de stock (Compte Fournisseur)</relationshipLabel>
    <relationshipName>stockMovementFournisseur</relationshipName>
    <type>Lookup</type>
</CustomField>