force-app/main/default/objects/numm__stockMovement__c/fields/numm__Entrepot__c.field-meta.xml
<CustomField>
    <fullName>numm__Entrepot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrepot</label>
    <referenceTo>numm__Entrepot__c</referenceTo>
    <relationshipLabel>Mouvements de stock</relationshipLabel>
    <relationshipName>Mouvements_de_stock</relationshipName>
    <type>Lookup</type>
</CustomField>