force-app/main/default/objects/numm__stockMovement__c/fields/numm__produitID__c.field-meta.xml
<CustomField>
    <fullName>numm__produitID__c</fullName>
    <formula>numm__stock__r.numm__Produit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>produitID</label>
    <type>Text</type>
</CustomField>