force-app/main/default/objects/numm__stockMovement__c/fields/numm__Quantit_Brute__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_Brute__c</fullName>
    <label>Quantité Brute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>