force-app/main/default/objects/numm__stockMovement__c/fields/numm__stock__c.field-meta.xml
<CustomField>
    <fullName>numm__stock__c</fullName>
    <label>Stock</label>
    <referenceTo>numm__Stock__c</referenceTo>
    <relationshipLabel>Mouvements de stock</relationshipLabel>
    <relationshipName>stockMovement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>