force-app/main/default/objects/numm__stockMovement__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrée</fullName>
            </value>
            <value>
                <fullName>Sortie</fullName>
            </value>
            <value>
                <fullName>Changement d&#39;entrepôt</fullName>
            </value>
            <value>
                <fullName>Rebut</fullName>
            </value>
            <value>
                <fullName>Réservée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>